tests/outref/TC063.ref

-- TC063 : OCTO633 : EXTRACT accepts SQL function calls

CREATE TABLE extractnames (
	id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30),  age INTEGER,
	fullname VARCHAR EXTRACT CONCAT(firstName, ' ', lastName),
	nameandnumber VARCHAR EXTRACT CONCAT(lastName, id::varchar)
) GLOBAL "^names(keys(""ID""))";

-- Select all columns from table with function call EXTRACT column
select * from extractnames;

-- No assert failure from successive references to function call EXTRACT column
select fullname from extractnames;
select fullname from extractnames;

-- Function referenced by EXTRACT column not dropped if containing table still exists
drop function concat(varchar, varchar, varchar);
select fullname from extractnames;

-- Function referenced by EXTRACT column can be dropped if containing table is dropped
drop table extractnames;
drop function concat(varchar, varchar, varchar);
select concat('no', 'more', 'concat');
CREATE FUNCTION CONCAT(VARCHAR, VARCHAR, VARCHAR) RETURNS VARCHAR AS $$^%ydboctofCONCAT; -- Recreate dropped function for use in below queries

-- Error issued for self-referential EXTRACT columns definitions
create table selfref (firstname varchar, lastname varchar, fullname varchar extract concat(fullname, lastname)) READONLY;
select * from selfref;

-- No error when referencing EXTRACT columns in tables with no PRIMARY KEY
create table tmp (id integer, abs_id integer extract ABS(id)) READONLY;
select abs_id from tmp;

-- No error when EXTRACT column references another EXTRACT column
drop table tmp;
create table tmp (id integer primary key, firstname varchar, lastname varchar, fullname1 varchar extract concat(firstname, lastname), fullname2 varchar extract concat(firstname, fullname1)) GLOBAL "^names";
select fullname1 from tmp where id = 3;
select fullname2 from tmp where id = 3;

-- Error issued for EXTRACT columns with cyclic dependencies on other EXTRACT columns
drop table tmp;
create table tmp (id integer primary key, firstname varchar, lastname varchar, fullname1 varchar extract concat(firstname, fullname2), fullname2 varchar extract concat(fullname1, lastname)) GLOBAL "^names";

-- Error issued when key column passed to `values(...)` or non-key column passed to `keys(...)`
CREATE TABLE tmp (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), abs_id INTEGER EXTRACT "$$ABS^%ydboctosqlfunctions(values(""ID""))") GLOBAL "^names";
select * from tmp;
drop table tmp;
CREATE TABLE tmp (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), abs_id INTEGER EXTRACT "$$ABS^%ydboctosqlfunctions(keys(""LASTNAME""))") GLOBAL "^names";
select * from tmp;

-- Prevent drop of function depended on by EXTRACT columns until all tables containing dependent columns are dropped
DROP FUNCTION IF EXISTS SAMEVALUE(INTEGER);
CREATE FUNCTION SAMEVALUE(INTEGER) RETURNS INTEGER AS $$samevalue^functions;
CREATE TABLE products1 (product_no integer, name text, price numeric CONSTRAINT name1 CHECK (samevalue(product_no) < 1000));
DROP FUNCTION SAMEVALUE(INTEGER);
CREATE TABLE products2 (product_no integer, name text, price numeric CONSTRAINT name2 CHECK (samevalue(product_no) < 1000));
DROP FUNCTION SAMEVALUE(INTEGER);
drop table if exists extractnames1;
CREATE TABLE extractnames1 (id INTEGER PRIMARY KEY, id1 INTEGER EXTRACT SAMEVALUE(id));
DROP FUNCTION SAMEVALUE(INTEGER);
drop table if exists extractnames2;
CREATE TABLE extractnames2 (id INTEGER PRIMARY KEY, id2 INTEGER EXTRACT SAMEVALUE(id));
DROP TABLE products1;
DROP FUNCTION SAMEVALUE(INTEGER);
DROP TABLE products2;
DROP FUNCTION SAMEVALUE(INTEGER);
drop table extractnames1;
DROP FUNCTION SAMEVALUE(INTEGER);
drop table extractnames2;
DROP FUNCTION SAMEVALUE(INTEGER);

drop table if exists extractnames1;
CREATE TABLE extractnames1 (
	id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30),  age INTEGER,
	fullname1 VARCHAR EXTRACT CONCAT(firstName, ' ', lastName)
) GLOBAL "^names1(keys(""ID""))";
drop function concat(varchar, varchar, varchar);
drop table if exists extractnames2;
CREATE TABLE extractnames2 (
	id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30),  age INTEGER,
	fullname2 VARCHAR EXTRACT CONCAT(firstName, ' ', lastName)
) GLOBAL "^names2(keys(""ID""))";
drop function concat(varchar, varchar, varchar);
select * from extractnames1;
select * from extractnames2;
drop table extractnames1;
drop function concat(varchar, varchar, varchar);
select * from extractnames2;
drop table extractnames2;
drop function concat(varchar, varchar, varchar);
CREATE TABLE
ID|FIRSTNAME|LASTNAME|AGE|FULLNAME|NAMEANDNUMBER
0|Zero|Cool||Zero Cool|Cool0
1|Acid|Burn||Acid Burn|Burn1
2|Cereal|Killer||Cereal Killer|Killer2
3|Lord|Nikon||Lord Nikon|Nikon3
4|Joey|||Joey |4
5|Zero|Cool||Zero Cool|Cool5
(6 rows)
FULLNAME
Zero Cool
Acid Burn
Cereal Killer
Lord Nikon
Joey 
Zero Cool
(6 rows)
FULLNAME
Zero Cool
Acid Burn
Cereal Killer
Lord Nikon
Joey 
Zero Cool
(6 rows)
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function CONCAT(VARCHAR, VARCHAR, VARCHAR) because other objects (column "FULLNAME" on table "EXTRACTNAMES") depend on it
FULLNAME
Zero Cool
Acid Burn
Cereal Killer
Lord Nikon
Joey 
Zero Cool
(6 rows)
DROP TABLE
DROP FUNCTION
[ERROR]: ERR_UNKNOWN_FUNCTION: No function CONCAT defined with given parameter types (VARCHAR, VARCHAR, VARCHAR)
LINE 19:1: select concat('no', 'more', 'concat');
                  ^^^^^^
CREATE FUNCTION
[ERROR]: ERR_CIRCULAR_EXTRACT_DEFINITION: Definition for EXTRACT column "FULLNAME" contains circular dependency starting from EXTRACT column "FULLNAME"
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: SELFREF
LINE 23:1: select * from selfref;
                         ^^^^^^^
CREATE TABLE
ABS_ID
(0 rows)
DROP TABLE
CREATE TABLE
FULLNAME1
LordNikon
(1 row)
FULLNAME2
LordLordNikon
(1 row)
DROP TABLE
[ERROR]: ERR_CIRCULAR_EXTRACT_DEFINITION: Definition for EXTRACT column "FULLNAME1" contains circular dependency starting from EXTRACT column "FULLNAME2"
CREATE TABLE
[ERROR]: ERR_YOTTADB: YottaDB error: 150373850,octoPlan1+18^%ydboctoP*,%YDB-E-LVUNDEF, Undefined local variable: ydboctoInvalidExpression
DROP TABLE
CREATE TABLE
[ERROR]: ERR_YOTTADB: YottaDB error: 150373850,octoPlan1+18^%ydboctoP*,%YDB-E-LVUNDEF, Undefined local variable: %ydboctocursor(107,"keys",1,"TMP","LASTNAME")
DROP FUNCTION
CREATE FUNCTION
CREATE TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function SAMEVALUE(INTEGER) because other objects (constraint "NAME1" on table "PRODUCTS1") depend on it
CREATE TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function SAMEVALUE(INTEGER) because other objects (constraint "NAME1" on table "PRODUCTS1") depend on it
DROP TABLE
CREATE TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function SAMEVALUE(INTEGER) because other objects (constraint "NAME1" on table "PRODUCTS1") depend on it
DROP TABLE
CREATE TABLE
DROP TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function SAMEVALUE(INTEGER) because other objects (constraint "NAME2" on table "PRODUCTS2") depend on it
DROP TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function SAMEVALUE(INTEGER) because other objects (column "ID1" on table "EXTRACTNAMES1") depend on it
DROP TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function SAMEVALUE(INTEGER) because other objects (column "ID2" on table "EXTRACTNAMES2") depend on it
DROP TABLE
DROP FUNCTION
DROP TABLE
CREATE TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function CONCAT(VARCHAR, VARCHAR, VARCHAR) because other objects (column "FULLNAME1" on table "EXTRACTNAMES1") depend on it
DROP TABLE
CREATE TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function CONCAT(VARCHAR, VARCHAR, VARCHAR) because other objects (column "FULLNAME1" on table "EXTRACTNAMES1") depend on it
ID|FIRSTNAME|LASTNAME|AGE|FULLNAME1
(0 rows)
ID|FIRSTNAME|LASTNAME|AGE|FULLNAME2
(0 rows)
DROP TABLE
[ERROR]: ERR_DROP_FUNCTION_DEPENDS: Cannot DROP function CONCAT(VARCHAR, VARCHAR, VARCHAR) because other objects (column "FULLNAME2" on table "EXTRACTNAMES2") depend on it
ID|FIRSTNAME|LASTNAME|AGE|FULLNAME2
(0 rows)
DROP TABLE
DROP FUNCTION
